syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "user.proto";

option java_multiple_files = true;
option java_package = "sep3.project.jobservice.grpc";
option csharp_namespace = "Server.Grpc";

// A service operating on Job resources.
service JobService {
  // A method used to create a new job.
  rpc CreateJob(CreateJobRequest) returns (JobProto);
  // A method used to get a list of jobs and optionally filter it.
  rpc ListJobs(ListJobsRequest) returns (ListJobsResponse);
  // A method used to get a job by its ID.
  rpc GetJob(GetJobRequest) returns (JobProto);
}

// A request to be sent when calling the `CreateJob` method.
message CreateJobRequest {
  // The job to create.
  JobProto job = 1;
}

// A request to be sent when calling the `ListJobs` method.
message ListJobsRequest {
  // A query to filter items by.
  // The string should follow RSQL rules.
  // Example: "title=ilike=banking,description=ilike=banking"
  // Reference: https://github.com/perplexhub/rsql-jpa-specification?tab=readme-ov-file#rsql-syntax-reference
  string filter = 1;
  // The maximum number of items to return. The service may return fewer than this value.
  // If unspecified, at most 12 items will be returned.
  // The maximum value is 64; values above 64 will be coerced to 64.
  int32 page_size = 2;
  // A page token, received from a previous `ListJobs` call.
  // Provide this to retrieve the subsequent page.
  // If the number is invalid or not provided it will default to 0.
  string page_token = 3;
}

// A response received after calling the `ListJobs` method.
message ListJobsResponse {
  // The list of jobs.
  repeated JobProto jobs = 1;
  // A token, which can be sent as `page_token` to retrieve the next page.
  // If this field is omitted, there are no subsequent pages.
  string next_page_token = 2;
  // The total number of jobs.
  int64 total_size = 3;
}

// A request to be sent when calling the `GetJob` method.
message GetJobRequest {
  // The id of the job to get.
  int64 id = 1;
}

// A representation of a `Job` resource.
message JobProto {
  // The job identifier. Auto generated by DB when created.
  int64 id = 1;
  // The job title.
  string title = 2;
  // The job description.
  string description = 3;
  // The date when the job was posted.
  // Will default to the current time when the job was created.
  google.protobuf.Timestamp postingDate = 4;
  // The job deadline.
  google.protobuf.Timestamp deadline = 5;
  // The job location.
  string location = 6;
  // The job salary.
  int32 salary = 7;
  // The job type, must be one of `PartTime`, `FullTime`, `Internship`.
  string type = 8;
  // The job status, must be one of `Active`, `Closed`.
  string status = 9;
  // The job provider that created this job.
  UserProto jobProvider = 10;
}
